# swift-too

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
swift_too/: __init__.py  functions.py
swift_too/base/: classrepr.py  common.py  daterange.py  query_job.py  resolve.py  schema.py  skycoord.py  status.py
swift_too/swift/: calendar.py  clock.py  commands.py  data.py  guano.py  instruments.py  obsid.py  obsquery.py  planquery.py  requests.py  saa.py  schema.py  toorequest.py  uvot.py  visquery.py
